Move configuration out of code and into the json config file. Split production and development code to make this project easier to test and work on client side libraries.

--- a/ldap.json.example
+++ b/ldap.json.example
@@ -1,5 +1,6 @@
 {
   "ldap_url": "ldap://ldap.domain.com",
   "username": "ldap_username",
-  "password": "password"
+  "password": "password",
+  "bind_ip": "1.1.1.1"
 }
