--- a/package.json
+++ b/package.json
@@ -4,17 +4,6 @@
   "private": true,
   "devDependencies": {
     "axios": "^0.15.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-nodeunit": "^1.0.0",
-    "grunt-contrib-qunit": "^1.2.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^1.2.1",
-    "jshint-stylish": "^2.2.1",
     "node-sass": "^3.11.2",
     "react-scripts": "0.7.0"
   },
@@ -29,17 +18,16 @@
     "file-loader": "^0.9.0",
     "postcss-loader": "^1.1.1",
     "react": "^15.3.2",
-    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-fa": "^4.1.2",
     "react-router": "^3.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.10"
+    "style-loader": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "react": "react-scripts build",
+    "sass": "node-sass ./src/assets/scss/styles.scss ./src/assets/css/styles.css --output-style=compressed",
+    "build": "npm run sass && npm run react",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
