--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^15.6.2",
     "react-fa": "^4.2.0",
     "react-router": "^3.2.0",
-    "style-loader": "^0.13.2"
+    "style-loader": "^0.13.2",
+    "prop-types": "^15.5.7"
   },
   "scripts": {
     "start": "react-scripts start",
