--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "axios": "^0.15.2",
-    "node-sass": "^3.13.1",
-    "react-scripts": "0.7.0"
+    "axios": "^0.17.1",
+    "file-loader": "^1.1.6",
+    "node-sass": "^4.7.2",
+    "react-scripts": "^1.0.17",
+    "sass-loader": "^6.0.6",
+    "url-loader": "^0.6.2",
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "postcss-loader": "^1.3.3",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-fa": "^4.2.0",
-    "react-router": "^3.2.0",
-    "style-loader": "^0.13.2",
-    "prop-types": "^15.5.7"
+    "css-loader": "^0.28.7",
+    "postcss-loader": "^2.0.9",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "style-loader": "^0.19.1",
   },
   "scripts": {
     "start": "react-scripts start",
