--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "^1.0.17",
     "sass-loader": "^6.0.6",
     "url-loader": "^0.6.2",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -25,7 +26,7 @@
     "react-fa": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
