make default document root `/`

--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "build": "npm run sass && npm run react",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "/"
 }
