--- a/package.json
+++ b/package.json
@@ -4,37 +4,41 @@
   "private": true,
   "devDependencies": {
     "axios": "^0.19.0",
+    "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "node-sass": "^4.12.0",
-    "react-scripts": "^3.0.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.36.1"
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.1.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^3.1.0",
-    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-fa": "^5.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "style-loader": "^0.23.1"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "react": "react-scripts build",
-    "sass": "node-sass ./src/assets/scss/styles.scss ./src/assets/css/styles.css --output-style=compressed",
-    "build": "npm run sass && npm run react",
+    "build": "npm run react",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "/"
+  "homepage": "/",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
