--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-ldap==3.2.0
-Flask==1.1.1
-gevent==1.4.0
-logstash_formatter==0.5.17
-flask-cors==3.0.8
+ldap3
+Flask
+gevent
+logstash_formatter
+flask-cors
